--- a/EC++/EC++.vcxproj
+++ b/EC++/EC++.vcxproj
@@ -25,6 +25,8 @@
     <ClCompile Include="src\item04.cpp" />
     <ClCompile Include="src\item05.cpp" />
     <ClCompile Include="src\item06.cpp" />
+    <ClCompile Include="src\item07.cpp" />
+    <ClCompile Include="src\item08.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
