--- a/EC++/EC++.vcxproj.filters
+++ b/EC++/EC++.vcxproj.filters
@@ -33,5 +33,11 @@
     <ClCompile Include="src\item06.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\item07.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\item08.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
