--- a/EC++/EC++.vcxproj
+++ b/EC++/EC++.vcxproj
@@ -27,6 +27,9 @@
     <ClCompile Include="src\item06.cpp" />
     <ClCompile Include="src\item07.cpp" />
     <ClCompile Include="src\item08.cpp" />
+    <ClCompile Include="src\item09.cpp" />
+    <ClCompile Include="src\item10.cpp" />
+    <ClCompile Include="src\item11.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
