Add item15, item16, item17.

--- a/EC++/EC++.vcxproj
+++ b/EC++/EC++.vcxproj
@@ -34,6 +34,9 @@
     <ClCompile Include="src\items\item12.cpp" />
     <ClCompile Include="src\items\item13.cpp" />
     <ClCompile Include="src\items\item14.cpp" />
+    <ClCompile Include="src\items\item15.cpp" />
+    <ClCompile Include="src\items\item16.cpp" />
+    <ClCompile Include="src\items\item17.cpp" />
     <ClCompile Include="src\items\itemDB.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
