--- a/ECpp/ECpp.vcxproj.filters
+++ b/ECpp/ECpp.vcxproj.filters
@@ -90,6 +90,12 @@
     <ClCompile Include="src\items\item20.cpp">
       <Filter>Source Files\items</Filter>
     </ClCompile>
+    <ClCompile Include="src\items\item21.cpp">
+      <Filter>Source Files\items</Filter>
+    </ClCompile>
+    <ClCompile Include="src\items\item22.cpp">
+      <Filter>Source Files\items</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\executor\itemExecutor.h">
