--- a/ECpp/ECpp.vcxproj
+++ b/ECpp/ECpp.vcxproj
@@ -42,6 +42,7 @@
     <ClCompile Include="src\items\item20.cpp" />
     <ClCompile Include="src\items\item21.cpp" />
     <ClCompile Include="src\items\item22.cpp" />
+    <ClCompile Include="src\items\item23.cpp" />
     <ClCompile Include="src\items\itemDB.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
