--- a/ECpp/ECpp.vcxproj.filters
+++ b/ECpp/ECpp.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="src\items\item22.cpp">
       <Filter>Source Files\items</Filter>
     </ClCompile>
+    <ClCompile Include="src\items\item23.cpp">
+      <Filter>Source Files\items</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\executor\itemExecutor.h">
