--- a/ECpp/ECpp.vcxproj
+++ b/ECpp/ECpp.vcxproj
@@ -43,6 +43,8 @@
     <ClCompile Include="src\items\item21.cpp" />
     <ClCompile Include="src\items\item22.cpp" />
     <ClCompile Include="src\items\item23.cpp" />
+    <ClCompile Include="src\items\item24.cpp" />
+    <ClCompile Include="src\items\item25.cpp" />
     <ClCompile Include="src\items\itemDB.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
