--- a/ECpp/ECpp.vcxproj.filters
+++ b/ECpp/ECpp.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="src\items\item26.cpp">
       <Filter>Source Files\items</Filter>
     </ClCompile>
+    <ClCompile Include="src\items\item27.cpp">
+      <Filter>Source Files\items</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\executor\itemExecutor.h">
