--- a/ECpp/ECpp.vcxproj
+++ b/ECpp/ECpp.vcxproj
@@ -46,6 +46,7 @@
     <ClCompile Include="src\items\item24.cpp" />
     <ClCompile Include="src\items\item25.cpp" />
     <ClCompile Include="src\items\item26.cpp" />
+    <ClCompile Include="src\items\item27.cpp" />
     <ClCompile Include="src\items\itemDB.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
