--- a/ECpp/ECpp.vcxproj
+++ b/ECpp/ECpp.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="item28.cpp" />
     <ClCompile Include="src\executor\itemExecutor.cpp" />
     <ClCompile Include="src\items\item01.cpp" />
     <ClCompile Include="src\items\item02.cpp" />
